Complit HTML_DZ_Module_12_PZ

--- a/HTML_DZ_Module_12_PZ(1).html
+++ b/HTML_DZ_Module_12_PZ(1).html
@@ -142,68 +142,63 @@
           <img src="pic/ad_bw.png" alt="child" width="25%"  class="">
         </div>
         <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 text-center mb-5 text-nowrap" >
-          <ul class="" style="list-style-type: none;">
+          <ul class=" text-left" style="list-style-type: none;">
             <li class="">
               <a class="" href="#"><small>Mobile applications</small></a>
             </li>
             <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
+              <a class="" href="#"><small>Nunc malesuada</small></a>
             </li>
             <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
+              <a class="" href="#"><small>Morbi nec porta</small></a>
             </li>
             <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
+              <a class="" href="#"><small>Nunc in libero a felis</small></a>
             </li>
             <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
-            </li>
-          </ul>
-        </div>
-        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 text-center mb-5 text-nowrap" >
-          <ul class="" style="list-style-type: none;">
-            <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
-            </li>
-            <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
-            </li>
-            <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
-            </li>
-            <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
-            </li>
-            <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
+              <a class="" href="#"><small>Suspendisse aliquam</small></a>
             </li>
           </ul>
         </div>
         <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 text-center mb-5 text-nowrap" >
-          <ul class="" style="list-style-type: none;">
+          <ul class="text-left" style="list-style-type: none;">
             <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
+              <a class="" href="#"><small>Quisque ultrices sollicitudi</small></a>
             </li>
             <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
+              <a class="" href="#"><small>Quisque metus sem</small></a>
             </li>
             <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
+              <a class="" href="#"><small>Maecenas nec diam</small></a>
             </li>
             <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
+              <a class="" href="#"><small>Phasellus placerat</small></a>
             </li>
             <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
+              <a class="" href="#"><small> Interdum et malesuada</small></a>
             </li>
           </ul>
         </div>
-
-
-
-
+        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 text-center mb-5 text-nowrap" >
+          <ul class=" text-left" style="list-style-type: none;">
+            <li class="">
+              <a class="" href="#"><small>Quisque facilisis </small></a>
+            </li>
+            <li class="">
+              <a class="" href="#"><small>Fusce convallis sagittis</small></a>
+            </li>
+            <li class="">
+              <a class="" href="#"><small>Donec porttitor viverra</small></a>
+            </li>
+            <li class="">
+              <a class="" href="#"><small>Nam gravida, leo vitae luctus</small></a>
+            </li>
+            <li class="">
+              <a class="" href="#"><small>Fusce convallis</small></a>
+            </li>
+          </ul>
+        </div>
     </div>
-
 
 
 
