--- a/HTML_DZ_Module_12_PZ(2).html
+++ b/HTML_DZ_Module_12_PZ(2).html
@@ -11,6 +11,10 @@
       body{
         font-size: 18px;
       }
+      .heading {
+        @include text-hide;
+      }
+
     </style>
     <title>HTML_DZ_Module_12_PZ</title>
   </head>
@@ -78,9 +82,9 @@
                 <form class="">
                   <div class="form-group mb-0" >
                     <select id="inputState" class="form-control">
-                      <option selected>
-                        <img src="pic/house.svg" alt="house" width="10" height="10" class="">
-                        house
+                      <option class="text-hide" style="background-image: url('pic/house.svg');" selected>
+                        house & garden
+
                       </option>
                       <option>12</option>
                       <option>1</option>
@@ -93,37 +97,74 @@
         </div>
       </div>
 
-      <div class="row container-fluid">
-        <div class="col-12">
-          <div class="d-flex flex-row border mt-5 p-3" >
-            <img src="pic/calendar.svg" class="" alt="calendar" width="18%" height="18%">
-            <div class="p-3 d-flex flex-column justify-content-between" style="width:auto; ">
-              <h5 class=""><span>Weekends</span></h5>
-              <p class="">Lorem ipsum dolor sit amet </p>
+      <div class="col-12 text-center">
+
+          <div class="row  border mt-5 p-2" >
+            <div class="col-xl-2 text-center">
+              <img src="pic/furniture_1.png" class="" alt="furniture" width="100%" >
             </div>
-            <p class=" ">1 day ago</p>
+
+            <div class="col-xl-8 p-4 text-left d-flex flex-column justify-content-between"  >
+              <h4 class="text-primary">Italian wooden wardrobe</h4>
+              <p class="mb-0">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-geo-alt-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                </svg>
+                <small class="mr-2">Nikolayev, Zavodskoy</small>
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-clock" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm8-7A8 8 0 1 1 0 8a8 8 0 0 1 16 0z"/>
+                  <path fill-rule="evenodd" d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5z"/>
+                </svg>
+                <small>Today at 10:45</small>
+               </p>
+            </div>
+            <div class="col-xl-2 "><h2>129$</h2></div>
           </div>
 
-          <div class="d-flex flex-row border mt-5 p-3" >
-            <img src="pic/calendar.svg" class="" alt="calendar" width="18%" height="18%">
-            <div class="p-3" style="width:auto; ">
-              <h5 class=""><span>Weekends</span><small class="float-right">1 day ago</small></h5>
-              <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus
-                 ipsum in vulputate sollicitudin. Fusce scelerisque nec leo sit amet venenatis.
-                  Aliquam consectetur maximus velit. </p>
+          <div class="row  border mt-5 p-2" >
+            <div class="col-xl-2 text-center">
+              <img src="pic/furniture_3.png" class="" alt="furniture" width="100%" >
             </div>
+
+            <div class="col-xl-8 p-4 text-left d-flex flex-column justify-content-between"  >
+              <h4 class="text-primary">Sell used wardrobe</h4>
+              <p class="mb-0">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-geo-alt-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                </svg>
+                <small class="mr-2">Nikolayev, Zavodskoy</small>
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-clock" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm8-7A8 8 0 1 1 0 8a8 8 0 0 1 16 0z"/>
+                  <path fill-rule="evenodd" d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5z"/>
+                </svg>
+                <small>Today at 9:34</small>
+               </p>
+            </div>
+            <div class="col-xl-2 "><h2>50$</h2></div>
           </div>
 
-          <div class="d-flex flex-row border mt-5 p-3" >
-            <img src="pic/calendar.svg" class="" alt="calendar" width="18%" height="18%">
-            <div class="p-3" style="width:auto; ">
-              <h5 class=""><span>Weekends</span><small class="float-right">1 day ago</small></h5>
-              <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus
-                 ipsum in vulputate sollicitudin. Fusce scelerisque nec leo sit amet venenatis.
-                  Aliquam consectetur maximus velit. </p>
+          <div class="row  border mt-5 p-2" >
+            <div class="col-xl-2 text-center">
+              <img src="pic/furniture_2.png" class="" alt="furniture" width="100%" >
             </div>
+
+            <div class="col-xl-8 p-4 text-left d-flex flex-column justify-content-between"  >
+              <h4 class="text-primary">Wardrobe Helga from Germany</h4>
+              <p class="mb-0">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-geo-alt-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                </svg>
+                <small class="mr-2">Nikolayev, Zavodskoy</small>
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-clock" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm8-7A8 8 0 1 1 0 8a8 8 0 0 1 16 0z"/>
+                  <path fill-rule="evenodd" d="M7.5 3a.5.5 0 0 1 .5.5v5.21l3.248 1.856a.5.5 0 0 1-.496.868l-3.5-2A.5.5 0 0 1 7 9V3.5a.5.5 0 0 1 .5-.5z"/>
+                </svg>
+                <small>Today at 0:23</small>
+               </p>
+            </div>
+            <div class="col-xl-2 "><h2>70$</h2></div>
           </div>
-        </div>
+
 
       </div>
 
@@ -132,59 +173,59 @@
           <img src="pic/ad_bw.png" alt="child" width="25%"  class="">
         </div>
         <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 text-center mb-5 text-nowrap" >
-          <ul class="" style="list-style-type: none;">
+          <ul class=" text-left" style="list-style-type: none;">
             <li class="">
               <a class="" href="#"><small>Mobile applications</small></a>
             </li>
             <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
+              <a class="" href="#"><small>Nunc malesuada</small></a>
             </li>
             <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
+              <a class="" href="#"><small>Morbi nec porta</small></a>
             </li>
             <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
+              <a class="" href="#"><small>Nunc in libero a felis</small></a>
             </li>
             <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
-            </li>
-          </ul>
-        </div>
-        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 text-center mb-5 text-nowrap" >
-          <ul class="" style="list-style-type: none;">
-            <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
-            </li>
-            <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
-            </li>
-            <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
-            </li>
-            <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
-            </li>
-            <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
+              <a class="" href="#"><small>Suspendisse aliquam</small></a>
             </li>
           </ul>
         </div>
         <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 text-center mb-5 text-nowrap" >
-          <ul class="" style="list-style-type: none;">
+          <ul class="text-left" style="list-style-type: none;">
             <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
+              <a class="" href="#"><small>Quisque ultrices sollicitudi</small></a>
             </li>
             <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
+              <a class="" href="#"><small>Quisque metus sem</small></a>
             </li>
             <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
+              <a class="" href="#"><small>Maecenas nec diam</small></a>
             </li>
             <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
+              <a class="" href="#"><small>Phasellus placerat</small></a>
             </li>
             <li class="">
-              <a class="" href="#"><small>Mobile applications</small></a>
+              <a class="" href="#"><small> Interdum et malesuada</small></a>
+            </li>
+          </ul>
+        </div>
+        <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 text-center mb-5 text-nowrap" >
+          <ul class=" text-left" style="list-style-type: none;">
+            <li class="">
+              <a class="" href="#"><small>Quisque facilisis </small></a>
+            </li>
+            <li class="">
+              <a class="" href="#"><small>Fusce convallis sagittis</small></a>
+            </li>
+            <li class="">
+              <a class="" href="#"><small>Donec porttitor viverra</small></a>
+            </li>
+            <li class="">
+              <a class="" href="#"><small>Nam gravida, leo vitae luctus</small></a>
+            </li>
+            <li class="">
+              <a class="" href="#"><small>Fusce convallis</small></a>
             </li>
           </ul>
         </div>
