Complit HTML_DZ_Module_13_DZ(1)

--- a/HTML_DZ_Module_13_DZ(1).html
+++ b/HTML_DZ_Module_13_DZ(1).html
@@ -17,6 +17,7 @@
 	.ml_1{margin-left: .5em;}
 	.ml_2{margin-left: 1em;}
 	.mb_1{margin-bottom: .5em;}
+	.mt_1{margin-top: : .5em;}
 	.p_1{padding: 1em}
 	</style>
 </head>
@@ -25,10 +26,10 @@
     <div class="nav-wrapper #0d47a1 blue darken-4">
       <a href="#" class="brand-logo" style=" margin-left:15px;">SN</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">
-          <img src="pic/business-man.png" class="mr-1"  alt="door" width="60" height="60" >
+        <li class="valign-wrapper"><a href="sass.html">
+          <img src="pic/Bulock.jpeg" class="mr-1 circle"  alt="door" width="auto" height="65px" >
         </a></li>
-        <li><a href="badges.html">Luell Hubbard</a></li>
+        <li><a href="badges.html">Sandra Bullock</a></li>
         <li><a href="badges.html"></a></li>
       </ul>
     </div>
@@ -84,7 +85,7 @@
     <div class="col s12 ">
       <div class="card z-depth-5">
         <div class="card-image">
-          <img src="pic/business-man.png">
+          <img src="pic/Bulock.jpeg" class="circle">
         </div>
         <div class="card-action">
 					<a href="#" class="waves-effect waves-light btn" style="display: block; background:#599cff;">EDIT</a>
@@ -98,39 +99,38 @@
 					<div class="col s4 center-align ">
 						<img width="90%" src="pic/business-man.png">
 						<span>David Stanley</span>
-
-						  </div>
-					<div class="col s4 center-align">
-						<img width="90%" src="pic/designer.png">
-						<span>David Stanley</span>
 					</div>
 					<div class="col s4 center-align">
-						<img width="90%" src="pic/business-man.png">
+						<img width="90%" src="pic/designer.png">
 						<span>Brianna Harper</span>
+					</div>
+					<div class="col s4 center-align">
+						<img width="90%" src="pic/bussiness-man1.png">
+						<span>Daniel Patt</span>
 					</div>
 					<div class="col s4 center-align">
 						<img width="90%" src="pic/man.png">
 						<span>Lloyd Bishop</span>
 					</div>
 					<div class="col s4 center-align">
-						<img width="90%" src="pic/business-man.png">
-						<span>David Stanley</span>
+						<img width="90%" src="pic/boy.png">
+						<span>Luke Diaz</span>
 					</div>
 					<div class="col s4 center-align">
-						<img width="90%" src="pic/business-man.png">
-						<span>David Stanley</span>
+						<img width="90%" src="pic/cosplayer.png">
+						<span>Brian Turner</span>
 					</div>
 					<div class="col s4 center-align">
-						<img width="90%" src="pic/business-man.png">
-						<span>David Stanley</span>
+						<img width="90%" src="pic/woman.png">
+						<span>Amia Baker</span>
 					</div>
 					<div class="col s4 center-align">
-						<img width="90%" src="pic/business-man.png">
-						<span>David Stanley</span>
+						<img width="90%" src="pic/avatar.png">
+						<span>Jordan Torres</span>
 					</div>
 					<div class="col s4 center-align">
-						<img width="90%" src="pic/business-man.png">
-						<span>David Stanley</span>
+						<img width="90%" src="pic/dad.png">
+						<span>Robert Hill</span>
 					</div>
 				</div>
 
@@ -144,7 +144,7 @@
 				    <div class="col s12 ">
 				      <div class="card ">
 				        <div class="card-content ">
-				          <span class="card-title grey-text text-darken-2" style="border-bottom:1px solid #eeeeee; padding-bottom: .5em; font-weight: 400;">Luell Hubbard</span>
+				          <span class="card-title grey-text text-darken-2" style="border-bottom:1px solid #eeeeee; padding-bottom: .5em; font-weight: 400;">Sandra Annette Bullock</span>
 										<table>
 							        <tbody>
 							          <tr style=" border:none;">
@@ -208,9 +208,9 @@
 				        </div>
 				        <div class="yellow-text text-darken-2 valign-wrapper p_1">
 									<i  class="ml_1 material-icons">favorite</i>
-									<span class="ml_1">342</span>
+									<span class="ml_1">398</span>
 									<i  class="ml_2 material-icons">chat</i>
-									<span class="ml_1">149</span>
+									<span class="ml_1">197</span>
 				          <i  class="ml_2 material-icons">reply</i>>
 				        </div>
 				      </div>
