complit HTML_DZ_Module_13_DZ(2)

--- a/HTML_DZ_Module_13_DZ(1).html
+++ b/HTML_DZ_Module_13_DZ(1).html
@@ -14,6 +14,7 @@
 
 
 	<style >
+
 	.ml_1{margin-left: .5em;}
 	.ml_2{margin-left: 1em;}
 	.mb_1{margin-bottom: .5em;}
@@ -26,9 +27,9 @@
     <div class="nav-wrapper #0d47a1 blue darken-4">
       <a href="#" class="brand-logo" style=" margin-left:15px;">SN</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li class="valign-wrapper"><a href="sass.html">
-          <img src="pic/Bulock.jpeg" class="mr-1 circle"  alt="door" width="auto" height="65px" >
-        </a></li>
+				<li class="mt_1">
+          <img src="pic/Bulock.jpeg" class="mt_1 mr-1 circle"  alt="Bulock" width="auto" height="64px" style="padding:5px;">
+        </li>
         <li><a href="badges.html">Sandra Bullock</a></li>
         <li><a href="badges.html"></a></li>
       </ul>
@@ -83,7 +84,7 @@
       <div class="col s3">
 				<div class="row">
     <div class="col s12 ">
-      <div class="card z-depth-5">
+      <div class="card  hoverable">
         <div class="card-image">
           <img src="pic/Bulock.jpeg" class="circle">
         </div>
@@ -93,7 +94,7 @@
       </div>
     </div>
 		<div class="col s12 ">
-      <div class="card p_1">
+      <div class="card p_1 hoverable">
 	      <h5 class="mb_1 ml_1">Friends (245):</h5>
 				<div class="row">
 					<div class="col s4 center-align ">
@@ -106,7 +107,7 @@
 					</div>
 					<div class="col s4 center-align">
 						<img width="90%" src="pic/bussiness-man1.png">
-						<span>Daniel Patt</span>
+						<span>Daniel Pattern</span>
 					</div>
 					<div class="col s4 center-align">
 						<img width="90%" src="pic/man.png">
@@ -142,7 +143,7 @@
       <div class="col s6">
 				<div class="row" style="margin-bottom:0;">
 				    <div class="col s12 ">
-				      <div class="card ">
+				      <div class="card hoverable">
 				        <div class="card-content ">
 				          <span class="card-title grey-text text-darken-2" style="border-bottom:1px solid #eeeeee; padding-bottom: .5em; font-weight: 400;">Sandra Annette Bullock</span>
 										<table>
@@ -169,11 +170,11 @@
 
 					<div class="row" style="margin-bottom:0;">
 				    <div class="col s12 ">
-				      <div class="card ">
+				      <div class="card hoverable">
 				        <div class="card-content " style="border-bottom:1px solid #eeeeee;">
 				          <div class="mb_1" style="display:flex; flex-wrap: nowrap; align-items:center;">
-										<img src="pic/business-man.png" width="10%" style="display:inline;">
-										<div  style="display:inline-flex; flex-direction: column; margin-left:1em;"><h6 style="font-weight: 600;">Luell Hubbard</h6><small class="grey-text text-darken-1">1 Apr 2018</small></div>
+										<img src="pic/Bulock.jpeg" width="10%" style="display:inline; " class="circle">
+										<div  style="display:inline-flex; flex-direction: column; margin-left:1em;"><h6 style="font-weight: 600;">Sandra Bullock</h6><small class="grey-text text-darken-1">1 Apr 2018</small></div>
 									</div>
 				          <p>I am a very simple card. I am good at containing small bits of information.
 				          I am convenient because I require little markup to use effectively.Sed porta
@@ -186,7 +187,7 @@
 									<span class="ml_1">342</span>
 									<i  class="ml_2 material-icons">chat</i>
 									<span class="ml_1">149</span>
-				          <i  class="ml_2 material-icons">reply</i>>
+				          <i  class="ml_2 material-icons">reply</i>
 				        </div>
 				      </div>
 				    </div>
@@ -194,11 +195,11 @@
 
 					<div class="row">
 				    <div class="col s12 ">
-				      <div class="card ">
+				      <div class="card hoverable">
 				        <div class="card-content " style="border-bottom:1px solid #eeeeee;">
 				          <div class="mb_1" style="display:flex; flex-wrap: nowrap; align-items:center;">
-										<img src="pic/business-man.png" width="10%" style="display:inline;">
-										<div  style="display:inline-flex; flex-direction: column; margin-left:1em;"><h6 style="font-weight: 600;">Luell Hubbard</h6><small class="grey-text text-darken-1">1 Apr 2018</small></div>
+										<img src="pic/Bulock.jpeg" width="10%" style="display:inline;" class="circle">
+										<div  style="display:inline-flex; flex-direction: column; margin-left:1em;"><h6 style="font-weight: 600;">Sandra Bullock</h6><small class="grey-text text-darken-1">1 Apr 2018</small></div>
 									</div>
 				          <p>I am a very simple card. I am good at containing small bits of information.
 				          I am convenient because I require little markup to use effectively.Sed porta
