Complit HTML_DZ_Module_13_DZ(3).html

--- a/HTML_DZ_Module_13_DZ(1).html
+++ b/HTML_DZ_Module_13_DZ(1).html
@@ -212,7 +212,7 @@
 									<span class="ml_1">398</span>
 									<i  class="ml_2 material-icons">chat</i>
 									<span class="ml_1">197</span>
-				          <i  class="ml_2 material-icons">reply</i>>
+				          <i  class="ml_2 material-icons">reply</i>
 				        </div>
 				      </div>
 				    </div>
